QPID-8282: [JMS AMQP 0-x] Use java.util.Base64 for base64 encoding/decoding